--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -54,7 +54,7 @@
                     <li>Transparent pricing and ROI estimates</li>
                     <li>Experienced installation and support</li>
                 </ul>
-                <a href="{{ url_for('main.carbon_calculator') }}" class="btn btn-success">Start Your Assessment</a>
+                <a href="{{ url_for('main.energy_tracker') }}" class="btn btn-success">Start Your Assessment</a>
             </div>
             <div class="col-md-6">
                 <img src="{{ url_for('static', filename='images/solar_panels.jpg') }}" alt="Solar panels" class="img-fluid rounded shadow">
