--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Admin Dashboard{% endblock %}
+{% block title %}Bookings Dashboard{% endblock %}
 
 {% block content %}
 <div class="container mt-4">
