--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,7 @@
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('main.consultation') }}">Bookings</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('main.energy_tracker') }}">Energy Tracker</a></li>
                       <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('main.footprint_dashboard') }}">Footprint Dashboard</a>
+          
         </li>
       </ul>
 
@@ -54,7 +54,8 @@
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                                 {% if current_user.is_admin %}
-                                    <li><a class="dropdown-item" href="{{ url_for('main.admin_dashboard') }}">Admin Dashboard</a></li>
+                                    <li><a class="dropdown-item" href="{{ url_for('main.admin_dashboard') }}">Bookings Dashboard</a></li>
+                                    <li><a class="dropdown-item" href="{{ url_for('main.footprint_dashboard') }}">Footprint Dashboard</a></li>
                                     <li><a class="dropdown-item" href="{{ url_for('main.admin_manage_users') }}">Manage Users</a></li>
                                     <li><a class="dropdown-item" href="{{ url_for('main.admin_products') }}">Products</a></li>
                                     <li><hr class="dropdown-divider"></li>
