--- a/app/templates/basket.html
+++ b/app/templates/basket.html
@@ -46,9 +46,7 @@
 
                                 <!-- Delete -->
                                 <form action="{{ url_for('main.remove_from_basket', product_id=item.id) }}" method="post" class="d-inline">
-                                    <button type="submit" class="btn btn-link btn-sm text-danger p-0">
-                                        Delete
-                                    </button>
+                                    <button type="submit" class="btn btn-success btn-sm">Delete</button>
                                 </form>
 
                             </div>
