--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,28 +7,39 @@
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card shadow-sm my-3">
                     <div class="card-body">
+                        {% with messages = get_flashed_messages(with_categories=true) %}
+                            {% if messages %}
+                                {% for category, msg in messages %}
+                                    {% if category in ['error', 'danger'] %}
+                                        <div class="alert alert-danger">{{ msg }}</div>
+                                    {% else %}
+                                        <div class="alert alert-{{ category }}">{{ msg }}</div>
+                                    {% endif %}
+                                {% endfor %}
+                            {% endif %}
+                        {% endwith %}
                         <form method="post">
-                            {{ form.hidden_tag() }}
+                                {{ form.hidden_tag() }}
 
-                            <div class="mb-3">
-                                {{ form.username.label(class_='form-label') }}
-                                {{ form.username(class_='form-control') }}
-                                {% if form.username.errors %}
-                                    <div class="invalid-feedback d-block">
-                                        {{ form.username.errors[0] }}
-                                    </div>
-                                {% endif %}
-                            </div>
+                                <div class="mb-3">
+                                    {{ form.username.label(class_='form-label') }}
+                                    {{ form.username(class_='form-control' + (' is-invalid' if form.username.errors else '')) }}
+                                    {% if form.username.errors %}
+                                        <div class="invalid-feedback d-block">
+                                            {{ form.username.errors[0] }}
+                                        </div>
+                                    {% endif %}
+                                </div>
 
-                            <div class="mb-3">
-                                {{ form.password.label(class_='form-label') }}
-                                {{ form.password(class_='form-control') }}
-                                {% if form.password.errors %}
-                                    <div class="invalid-feedback d-block">
-                                        {{ form.password.errors[0] }}
-                                    </div>
-                                {% endif %}
-                            </div>
+                                <div class="mb-3">
+                                    {{ form.password.label(class_='form-label') }}
+                                    {{ form.password(class_='form-control' + (' is-invalid' if form.password.errors else '')) }}
+                                    {% if form.password.errors %}
+                                        <div class="invalid-feedback d-block">
+                                            {{ form.password.errors[0] }}
+                                        </div>
+                                    {% endif %}
+                                </div>
 
                             <div class="mb-3 form-check">
                                 {{ form.remember_me(class_='form-check-input', id=form.remember_me.id) }}
